--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                     <h3>Maquillaje</h3>
                 </div>
                 <div class="category-card">
-                    <img src="img/cabello.png" alt="Categoría 3">
-                    <h3>Cabello</h3>
+                    <img src="img/accesorios.png" alt="Categoría 3">
+                    <h3>Accesorios</h3>
                 </div>
             </div>
         </div>
@@ -207,7 +207,7 @@
             <div class="footer-content">
                 <div class="footer-logo">
                     <h2>BEAR</h2>
-                    <p>Productos artesanales de calidad</p>
+                    
                 </div>
                 <div class="footer-links">
                     <h3>Enlaces rápidos</h3>
