--- a/index.html
+++ b/index.html
@@ -71,19 +71,20 @@
         </div>
     </section>
 
+    <!-- Modificar la sección de categorías para que sean clickeables y filtren productos -->
     <section id="categorias" class="categories">
         <div class="container">
             <h2 class="section-title">Categorías</h2>
             <div class="category-grid">
-                <div class="category-card">
+                <div class="category-card" data-category="skincare">
                     <img src="img/skin.jpg" alt="Categoría 1">
                     <h3>Skin Care</h3>
                 </div>
-                <div class="category-card">
+                <div class="category-card" data-category="maquillaje">
                     <img src="img/maquillaje.png" alt="Categoría 2">
                     <h3>Maquillaje</h3>
                 </div>
-                <div class="category-card">
+                <div class="category-card" data-category="accesorios">
                     <img src="img/accesorios.png" alt="Categoría 3">
                     <h3>Accesorios</h3>
                 </div>
@@ -202,12 +203,61 @@
         </div>
     </div>
 
+    <!-- Modal para detalles de producto -->
+    <div id="product-modal" class="modal">
+        <div class="modal-content product-detail-modal">
+            <span class="close">&times;</span>
+            <div class="product-detail-content">
+                <div class="product-detail-image">
+                    <!-- La imagen se cargará dinámicamente -->
+                </div>
+                <div class="product-detail-info">
+                    <h2 id="modal-product-name"></h2>
+                    <p class="modal-product-price"></p>
+                    <div class="product-rating">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                        <span class="rating-count"></span>
+                    </div>
+                    <div class="product-description">
+                        <h3>Descripción</h3>
+                        <p id="modal-product-description"></p>
+                    </div>
+                    <div class="product-features">
+                        <h3>Características</h3>
+                        <ul id="modal-product-features">
+                            <!-- Las características se cargarán dinámicamente -->
+                        </ul>
+                    </div>
+                    <div class="product-usage">
+                        <h3>Modo de uso</h3>
+                        <p id="modal-product-usage"></p>
+                    </div>
+                    <div class="product-quantity">
+                        <h3>Cantidad</h3>
+                        <div class="quantity-control">
+                            <button class="quantity-btn decrease" id="modal-quantity-decrease">-</button>
+                            <input type="number" class="quantity-input" id="modal-quantity" value="1" min="1">
+                            <button class="quantity-btn increase" id="modal-quantity-increase">+</button>
+                        </div>
+                    </div>
+                    <button class="btn add-to-cart-modal" id="modal-add-to-cart">Agregar al carrito</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer>
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
                     <h2>BEAR</h2>
-                    
+                   
                 </div>
                 <div class="footer-links">
                     <h3>Enlaces rápidos</h3>
@@ -235,3 +285,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
