--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
                 <div class="slider" id="news-slider">
                     <!-- Las imágenes se cargarán dinámicamente con JavaScript -->
                     <div class="slide active">
-                        <img src="img/promo1.jpg" alt="Promoción 1">
+                        <img src="promos/banner1.jpg" alt="Promoción 1">
                     </div>
                     <div class="slide">
-                        <img src="img/promo2.jpg" alt="Promoción 2">
+                        <img src="promos/banner2.jpg" alt="Promoción 2">
                     </div>
                     <div class="slide">
-                        <img src="img/promo3.jpg" alt="Nuevos ingresos">
+                        <img src="promos/banner3.jpg" alt="Nuevos ingresos">
                     </div>
                     <div class="slide">
-                        <img src="img/promo4.jpg" alt="Oferta especial">
+                        <img src="promos/banner4.jpg" alt="Oferta especial">
                     </div>
                 </div>
                 <!-- Indicadores de posición del slider -->
