--- a/index.html
+++ b/index.html
@@ -207,6 +207,18 @@
                     <label for="customer-email">Email</label>
                     <input type="email" id="customer-email" required>
                 </div>
+                <div class="form-group">
+                    <label for="customer-cel">Telefono</label>
+                    <input type="celphone" id="customer-celphone" required>
+                </div>
+                <div class="form-group">
+                    <label for="customer-adress">Dirección</label>
+                    <input type="adress" id="customer-adress" required>
+                </div>
+                <div class="form-group">
+                    <label for="customer-cp">Codigo Postal</label>
+                    <input type="cp" id="customer-cp" required>
+                </div>
                 <button type="submit" class="btn">Enviar pedido</button>
             </form>
         </div>
