--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.cdnfonts.com/css/bogart" rel="stylesheet">
+    <link rel="shortcut icon" href="img/icon.png" />
 </head>
 <body>
     <!-- Encabezado del sitio con navegación -->
